k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-api
  labels:
    name: ecommerce-api
